add html/js for new block

--- a/index.html
+++ b/index.html
@@ -1,21 +1,25 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="./normalize.css">
-    <link rel="stylesheet" href="./style.css">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="./normalize.css" />
+    <link rel="stylesheet" href="./style.css" />
     <title>To-do list</title>
-</head>
-<body>
+  </head>
+  <body>
     <main>
-    <h1>to-do list</h1>
-    <div>
-        <input type="text" id="taskInput" placeholder="New item" />
+      <div class="list">
+        <h1>to-do list</h1>
+        <h2 class="firstSubtitle">New task</h2>
+        <input type="text" id="taskInput" placeholder="New task" />
         <button id="addButton">Add</button>
-    </div>
+        <h2 class="secondSubtitle">To complete</h2>
         <ul id="taskList"></ul>
+        <div id="noTasks">No tasks</div>
+        <button id="clearButton" disabled>Clear</button>
+      </div>
     </main>
     <script src="./main.js"></script>
-</body>
+  </body>
 </html>
