update js, checkbox style

--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
         <h2 class="firstSubtitle">New task</h2>
         <input type="text" id="taskInput" placeholder="New task" />
         <button id="addButton">Add</button>
+        <div id="errorMessage"></div>
         <h2 class="secondSubtitle">To complete</h2>
         <ul id="taskList"></ul>
         <div id="noTasks">No tasks</div>
